--- a/.github/workflows/update-checker.yml
+++ b/.github/workflows/update-checker.yml
@@ -17,8 +17,8 @@ env:
 
 on:
   workflow_dispatch:
-#  schedule:
-#    - cron: 0 */18 * * *
+  schedule:
+    - cron: 0 12 */7 * *
 
 jobs:
   check:
