--- a/.config
+++ b/.config
@@ -2,6 +2,11 @@ CONFIG_TARGET_rockchip=y
 CONFIG_TARGET_rockchip_armv8=y
 CONFIG_TARGET_rockchip_armv8_DEVICE_friendlyarm_nanopi-r2s=y
 
+CONFIG_TARGET_KERNEL_PARTSIZE=32
+CONFIG_TARGET_ROOTFS_PARTSIZE=512
+CONFIG_TARGET_ROOTFS_EXT4FS=y
+CONFIG_TARGET_SQUASHFS_BLOCK_SIZE=512
+
 CONFIG_DEVEL=y
 CONFIG_ARIA2_BITTORRENT=y
 CONFIG_ARIA2_NOXML=y
@@ -28,7 +33,6 @@ CONFIG_PACKAGE_6in4=y
 CONFIG_PACKAGE_appfilter=y
 CONFIG_PACKAGE_aria2=y
 CONFIG_PACKAGE_ariang=y
-CONFIG_PACKAGE_attendedsysupgrade-common=y
 CONFIG_PACKAGE_baidupcs-web=y
 CONFIG_PACKAGE_bash=y
 CONFIG_PACKAGE_blkid=y
@@ -116,7 +120,6 @@ CONFIG_PACKAGE_lsblk=y
 
 CONFIG_PACKAGE_luci-app-argon-config=y
 CONFIG_PACKAGE_luci-app-aria2=y
-CONFIG_PACKAGE_luci-app-attendedsysupgrade=y
 CONFIG_PACKAGE_luci-app-baidupcs-web=y
 CONFIG_PACKAGE_luci-app-cshark=y
 CONFIG_PACKAGE_luci-app-ddnsto=y
@@ -222,19 +225,11 @@ CONFIG_PACKAGE_watchcat=y
 CONFIG_PACKAGE_xray-core=y
 CONFIG_PACKAGE_xray-plugin=y
 
-CONFIG_TARGET_KERNEL_PARTSIZE=32
-CONFIG_TARGET_ROOTFS_PARTSIZE=256
-CONFIG_TARGET_SQUASHFS_BLOCK_SIZE=512
-
-CONFIG_TROJAN_GO_COMPRESS_UPX=y
-
-CONFIG_V2RAY_CORE_COMPRESS_UPX=y
 
 CONFIG_VERSIONOPT=y
-CONFIG_VERSION_BUG_URL=""
+CONFIG_VERSION_BUG_URL="https://github.com/Kerite/Lede-R2S-firmware/issues"
 CONFIG_VERSION_CODE=""
 CONFIG_VERSION_CODE_FILENAMES=y
-CONFIG_VERSION_DIST="OpenWrt"
 CONFIG_VERSION_FILENAMES=y
 CONFIG_VERSION_HOME_URL=""
 CONFIG_VERSION_HWREV=""
@@ -244,8 +239,6 @@ CONFIG_VERSION_NUMBER=""
 CONFIG_VERSION_PRODUCT=""
 CONFIG_VERSION_REPO="https://downloads.openwrt.org/snapshots"
 CONFIG_VERSION_SUPPORT_URL=""
-
-CONFIG_XRAY_CORE_COMPRESS_UPX=y
 
 CONFIG_boost-compile-visibility-hidden=y
 CONFIG_boost-runtime-shared=y
@@ -289,3 +282,7 @@ CONFIG_PACKAGE_vlmcsd=y
 
 CONFIG_STRONGSWAN_ROUTING_TABLE="220"
 CONFIG_STRONGSWAN_ROUTING_TABLE_PRIO="220"
+
+CONFIG_XRAY_CORE_COMPRESS_UPX=y
+CONFIG_TROJAN_GO_COMPRESS_UPX=y
+CONFIG_V2RAY_CORE_COMPRESS_UPX=y
