--- a/.config
+++ b/.config
@@ -99,6 +99,7 @@ CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray_Plugin=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Xray=y
 
 CONFIG_PACKAGE_luci-compat=y
+CONFIG_PACKAGE_luci-proto-minieap=y
 CONFIG_PACKAGE_luci-proto-ipv6=y
 
 CONFIG_DEVEL=y
