--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -217,7 +217,7 @@ jobs:
       run: |
         echo "$RELEASE_TAG\\-$(date +"%Y\\.%m\\.%d\\-%H%M") 固件编译完成了" > tgmsg.txt
         echo "status: ${{ steps.tag.outputs.status }}" >> tgmsg.txt
-        echo "(Github Release)[https://github.com/Kerite/Lede-R2S-firmware/releases/tag/${{ steps.tag.outputs.release_tag }}]" >> tgmsg.txt
+        echo "[Github Release](https://github.com/Kerite/Lede-R2S-firmware/releases/tag/${{ steps.tag.outputs.release_tag }})" >> tgmsg.txt
         cat release.txt >> tgmsg.txt
         TG_SEND_TXT=`cat tgmsg.txt`
         curl -k -d chat_id=${{ secrets.TGID }} -d text="$TG_SEND_TXT" -d parse_mode=MarkdownV2 -d reply_to_message_id="${{ env.MESSAGE_ID }}" "https://api.telegram.org/bot${{ secrets.TG_TOKEN }}/sendMessage"
