--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -34,7 +34,7 @@ env:
   UPLOAD_BIN_DIR: false
   UPLOAD_FIRMWARE: true
   UPLOAD_COWTRANSFER: false
-  UPLOAD_WETRANSFER: false
+  UPLOAD_WETRANSFER: true
   UPLOAD_RELEASE: true
   DATA_DIR: data
   TZ: Asia/Shanghai
@@ -97,7 +97,7 @@ jobs:
     - name: Install feeds
       run: cd openwrt && ./scripts/feeds install -a
 
-    - name: Load custom configuration
+    - name: Load custom configuration & Execute custom post-feeds scripts
       run: |
         [ -e files ] && mv files openwrt/files
         [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
@@ -152,7 +152,9 @@ jobs:
         cd openwrt/bin/targets/*/*
         rm -rf packages
         echo "FIRMWARE=$PWD" >> $GITHUB_ENV
-        echo "::set-output name=status::success"
+        # 只有存在.gz或者.img的文件被编译出来才认为成功
+        [ -e *.gz ] && echo "::set-output name=status::success"
+        [ -e *.img ] && echo "::set-output name=status::success"
 
     - name: Upload firmware directory
       uses: actions/upload-artifact@main
@@ -219,9 +221,10 @@ jobs:
     - name: TG Message
       if: env.SERVERCHAN_SCKEY == 'true' && !cancelled()
       run: |
+        COMPILE_STATUS=$ {{ steps.tag.outputs.status }}
         echo "$RELEASE_TAG\\-$(date +"%Y\\.%m\\.%d\\-%H%M") 固件编译完成了" > tgmsg.txt
-        echo "status: ${{ steps.tag.outputs.status }}" >> tgmsg.txt
-        echo "[Github Release](https://github.com/Kerite/Lede-R2S-firmware/releases/tag/${{ steps.tag.outputs.release_tag }})" >> tgmsg.txt
+        echo "编译结果: `[ $COMPILE_STATUS = 'success' ] && echo '🟢' || echo '🔴'`" >> tgmsg.txt
+        echo "[Github Release](https://github.com/${{ github.repository }}/releases/tag/${{ steps.tag.outputs.release_tag }})" >> tgmsg.txt
         cat release.txt >> tgmsg.txt
         TG_SEND_TXT=`cat tgmsg.txt`
         curl -k -d chat_id=${{ secrets.TGID }} -d text="$TG_SEND_TXT" -d parse_mode=MarkdownV2 -d reply_to_message_id="${{ env.MESSAGE_ID }}" "https://api.telegram.org/bot${{ secrets.TG_TOKEN }}/sendMessage"
