--- a/.config
+++ b/.config
@@ -132,6 +132,7 @@ CONFIG_PACKAGE_frpc=y
 CONFIG_PACKAGE_fullconenat=y
 CONFIG_PACKAGE_hd-idle=y
 CONFIG_PACKAGE_linkease=y
+CONFIG_PACKAGE_minieap=y
 CONFIG_PACKAGE_trojan-go=y
 CONFIG_PACKAGE_trojan-plus=y
 CONFIG_PACKAGE_uugamebooster=y
