--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -56,7 +56,7 @@ jobs:
     - name: TG Message
       if: env.SERVERCHAN_SCKEY == 'true'
       run: |
-        MESSAGE_ID=`curl -k --data chat_id=${{ secrets.TGID }} --data "text=正在编译新的固件 ${{ env.BUILD_TAG }},请耐心等待 😋💐" "https://api.telegram.org/bot${{ secrets.TG_TOKEN }}/sendMessage" | jq .result.message_id`
+        MESSAGE_ID=`curl -k -d chat_id=${{ secrets.TGID }} -d "text=正在编译新的固件 ${{ env.BUILD_TAG }},请耐心等待 😋💐" -d parse_mode=MarkdownV2 "https://api.telegram.org/bot${{ secrets.TG_TOKEN }}/sendMessage" | jq .result.message_id`
         echo "MESSAGE_ID=$MESSAGE_ID" >> $GITHUB_ENV
 
     - name: Initialization environment
