--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -59,7 +59,7 @@ jobs:
         echo "正在编译新的固件 ${{ env.BUILD_TAG }},请耐心等待 😋💐" > tgmessage.txt
         echo "[Github Action](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}" >> tgmessage.txt
         TG_SENDTXT=`cat tgmessage.txt`
-        TG_RESULT=`curl -k -d chat_id=${{ secrets.TGID }} -d text="$TG_SENDTXT" -d parse_mode=MarkdownV2 "https://api.telegram.org/bot${{ secrets.TG_TOKEN }}/sendMessage`
+        TG_RESULT=`curl -k -d chat_id=${{ secrets.TGID }} -d text="$TG_SENDTXT" -d parse_mode=MarkdownV2 "https://api.telegram.org/bot${{ secrets.TG_TOKEN }}/sendMessage"`
         MESSAGE_ID=echo "$TG_RESULT" | jq .result.message_id
         echo "MESSAGE_ID=$MESSAGE_ID" >> $GITHUB_ENV
 
