--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -226,13 +226,21 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+    - name: Check cancelled
+      if: cancelled()
+      run: |
+        touch cancelled.flag
+
     - name: TG Message
       if: env.SERVERCHAN_SCKEY == 'true' && !cancelled() || cancelled()
       run: |
         COMPILE_STATUS=${{ steps.tag.outputs.status }}
-        echo "${{ env.BUILD_TAG }}固件编译完成了 " > tgmsg.txt
-        echo "编译结果: `[ $COMPILE_STATUS = 'success' ] && echo '🟢' || echo '🔴'`" >> tgmsg.txt
-        echo "Canceled: ${{ cancelled() }}" >> tgmsg.txt
+        echo "${{ env.BUILD_TAG }}固件编译结束" > tgmsg.txt
+        if [ -e cancelled.flag ]; then
+          echo "编译结果: 🟡被取消" >> tgmsg.txt
+        else
+          echo "编译结果: `[ $COMPILE_STATUS = 'success' ] && echo '🟢成功' || echo '🔴失败'`" >> tgmsg.txt
+        fi
         echo "[Github Release](https://github.com/${{ github.repository }}/releases/tag/${{ steps.tag.outputs.release_tag }})" >> tgmsg.txt
         cat release.txt >> tgmsg.txt
         TG_SEND_TXT=`cat tgmsg.txt`
