--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -159,10 +159,11 @@ jobs:
       run: |
         cd openwrt/bin/targets/*/*
         rm -rf packages
-        echo "FIRMWARE=$PWD" >> $GITHUB_ENV
-        # 只有存在.gz或者.img的文件被编译出来才认为成功
+        echo "check"
         [ -n "$(find . -name "*.gz" | head -1)" ] && echo "::set-output name=status::success"
         [ -n "$(find . -name "*.img" | head -1)" ] && echo "::set-output name=status::success"
+        echo "check2
+        echo "FIRMWARE=$PWD" >> $GITHUB_ENV
 
     - name: Upload firmware directory
       uses: actions/upload-artifact@main
